--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
   },
   "require": {
     "php": ">=7.2.0",
-    "leadvertex/plugin-component-registration": "^0.2.0"
+    "leadvertex/plugin-component-registration": "^0.2.0",
+    "leadvertex/plugin-component-settings": "^0.1.0"
   }
 }
